--- a/src/components/mypage/Albums.scss
+++ b/src/components/mypage/Albums.scss
@@ -9,56 +9,6 @@
     letter-spacing: 0.72px;
     margin-bottom: 24px;
   }
-  .albums__filter {
-    display: flex;
-    gap: 16px;
-    margin-bottom: 24px;
-    .albums__filter__btn {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 20px;
-      border: 1px solid var(--mob_main, #cf0);
-      display: flex;
-      width: 84px;
-      height: 32px;
-      padding: 6px 12px;
-      justify-content: center;
-      align-items: center;
-      gap: 6px;
-      img {
-        margin-right: 6px;
-      }
-      span {
-        color: var(--Dark-Color-08, var(--Color-08, #d9d9d9));
-        font-family: BrokmanTrial;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 100%; /* 14px */
-      }
-    }
-    .active {
-      width: 170px;
-      display: flex;
-      height: 32px;
-      padding: 6px 12px;
-      justify-content: center;
-      align-items: center;
-      gap: 6px;
-      border-radius: 20px;
-      border: 1px solid var(--mob_main, #cf0);
-      background: var(--mob_main, #cf0);
-      span {
-        color: var(--black, #000);
-        font-family: BrokmanTrial;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 100%; /* 14px */
-      }
-    }
-  }
   .albums__list {
     display: flex;
     gap: 8px;
@@ -140,6 +90,7 @@
     .my-albums__header {
       display: flex;
       justify-content: space-between;
+      margin-bottom: 20px;
       .my-albums__title {
         color: #fff;
         font-family: "TT Octosquares Trl";
@@ -159,6 +110,7 @@
       .my-albums__more-btn {
         width: 160px;
         height: 40px;
+        background-image: (url("../../assets/images/mypage/button-bg.svg"));
         fill: var(--mob_main, #cf0);
         color: var(--black, #000);
         text-align: center;
@@ -167,6 +119,74 @@
         font-style: normal;
         font-weight: 700;
         line-height: normal;
+      }
+    }
+    .my-albums__input {
+      margin-bottom: 20px;
+      input {
+        display: flex;
+        height: 46px;
+        padding: 16px;
+        align-items: center;
+        align-self: stretch;
+        border-radius: 4px;
+        border: 1px solid var(--stroke-stroke, #232323);
+        background: var(--section-bg, #141414);
+      }
+    }
+    .my-albums__table {
+      width: 100%;
+      padding: 12px 16px;
+      margin: 0 auto;
+      thead {
+        border-bottom: 1px solid var(--stroke-stroke, #232323);
+        tr {
+          th {
+            color: var(--text-grey, #6e6e6e);
+            font-family: BrokmanTrial;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+          }
+        }
+      }
+      tbody {
+        tr {
+          height: 70px;
+          padding: 12px 16px;
+          gap: 16px;
+          align-items: center;
+          align-self: stretch;
+          td {
+            text-align: center;
+            font-family: BrokmanTrial;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 100%; /* 14px */
+            border-bottom: 1px solid var(--stroke-stroke, #232323);
+            .my-albums__detail-btn {
+              color: #000;
+              text-align: right;
+              font-family: Inter;
+              font-size: 12px;
+              font-style: normal;
+              font-weight: 700;
+              line-height: normal;
+              display: flex;
+              padding: 6px 8px 5px 5px;
+              justify-content: center;
+              align-items: center;
+              border-radius: 16px;
+              background: var(--Color-10, #fff);
+            }
+          }
+          &:hover {
+            background: var(--mob_main, #cf0);
+            border: 1px solid red;
+          }
+        }
       }
     }
   }
