상훈 feat : 마이앨범 수정중

--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -136,7 +136,7 @@
   }
   .mypage__nav {
     display: flex;
-    margin-top: 40px;
+    margin: 40px auto;
     .mypage__nav-item {
       margin-right: 12px;
       display: flex;
