--- a/src/components/mypage/Albums.scss
+++ b/src/components/mypage/Albums.scss
@@ -11,75 +11,83 @@
   }
   .albums__list {
     display: flex;
-    gap: 8px;
-    margin-bottom: 100px;
-    .albums__item {
-      width: 300px;
+    padding: 20px 16px 16px 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    align-self: stretch;
+    border-radius: 12px;
+    border: 1px solid var(--Color-03, #222);
+    .albums__body {
       display: flex;
-      flex-direction: column;
-      .albums__item-title {
-        color: var(--Dark-Color-10, var(--Color-10, #fff));
-        font-family: Orbitron;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 100%; /* 16px */
-        letter-spacing: 0.48px;
-        margin-bottom: 12px;
-      }
-      .albums__item-intro {
+      .albums__item {
+        width: 300px;
         display: flex;
-        gap: 8px;
-        .albums__item__img-box {
-          width: 160px;
-          height: 160px;
+        flex-direction: column;
+        .albums__item-title {
+          color: var(--primary-base, #cf0);
+          font-family: Orbitron;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          letter-spacing: 0.54px;
+          margin-bottom: 16px;
         }
-        .albums__item-desc {
+        .albums__item-intro {
           display: flex;
-          flex-direction: column;
           gap: 8px;
-          .albums__item-desc-text {
-            align-self: stretch;
-            color: var(--Text-music-title, #f1f1f1);
-            font-family: Inter;
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 100%; /* 14px */
-            letter-spacing: 0.42px;
+          .albums__item__img-box {
+            width: 160px;
+            height: 160px;
           }
-          .albums__item__play-count {
+          .albums__item-desc {
             display: flex;
-            gap: 4px;
-            span {
-              color: var(--Text-music-sub, #aaa);
-              font-family: Inter;
-              font-size: 12px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: 100%; /* 12px */
-              letter-spacing: 0.36px;
-            }
-          }
-          .albums__item__user-info {
-            display: flex;
-            align-items: center;
-            img {
-              width: 24px;
-              height: 24px;
-              margin-right: 8px;
-            }
-            span {
+            flex-direction: column;
+            gap: 8px;
+            .albums__item-desc-text {
+              align-self: stretch;
               color: var(--Text-music-title, #f1f1f1);
               font-family: Inter;
-              font-size: 12px;
+              font-size: 14px;
               font-style: normal;
               font-weight: 400;
-              line-height: 100%; /* 12px */
-              letter-spacing: 0.36px;
+              line-height: 100%; /* 14px */
+              letter-spacing: 0.42px;
             }
-            .albums__item__more-btn {
-              margin-left: auto;
+            .albums__item__play-count {
+              display: flex;
+              gap: 4px;
+              span {
+                color: var(--Text-music-sub, #aaa);
+                font-family: Inter;
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 100%; /* 12px */
+                letter-spacing: 0.36px;
+              }
+            }
+            .albums__item__user-info {
+              display: flex;
+              align-items: center;
+              img {
+                width: 24px;
+                height: 24px;
+                margin-right: 8px;
+              }
+              span {
+                color: var(--Text-music-title, #f1f1f1);
+                font-family: Inter;
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 100%; /* 12px */
+                letter-spacing: 0.36px;
+              }
+              .albums__item__more-btn {
+                margin-left: auto;
+              }
             }
           }
         }
@@ -138,6 +146,7 @@
       width: 100%;
       padding: 12px 16px;
       margin: 0 auto;
+      border-collapse: collapse;
       thead {
         border-bottom: 1px solid var(--stroke-stroke, #232323);
         tr {
@@ -184,7 +193,6 @@
           }
           &:hover {
             background: var(--mob_main, #cf0);
-            border: 1px solid red;
           }
         }
       }
