--- a/src/components/filter/Filter.scss
+++ b/src/components/filter/Filter.scss
@@ -4,45 +4,20 @@
   margin-bottom: 24px;
   .albums__filter__btn {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
-    border: 1px solid var(--mob_main, #cf0);
-    display: flex;
-    height: 32px;
-    padding: 6px 12px;
+    padding: 8px;
     justify-content: center;
     align-items: center;
-    gap: 6px;
+    border-radius: 10px 2px 10px 10px;
+    border: 1px solid var(--primary-200, #a9d400);
     img {
       margin-right: 6px;
     }
     span {
-      color: var(--Dark-Color-08, var(--Color-08, #d9d9d9));
-      font-family: BrokmanTrial;
+      color: var(--primary-base, #cf0);
+      font-family: Inter;
       font-size: 14px;
       font-style: normal;
-      font-weight: 500;
-      line-height: 100%; /* 14px */
-    }
-  }
-  .active {
-    width: auto;
-    display: flex;
-    height: 32px;
-    padding: 6px 12px;
-    justify-content: center;
-    align-items: center;
-    gap: 6px;
-    border-radius: 20px;
-    border: 1px solid var(--mob_main, #cf0);
-    background: var(--mob_main, #cf0);
-    span {
-      color: var(--black, #000);
-      font-family: BrokmanTrial;
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 500;
+      font-weight: 400;
       line-height: 100%; /* 14px */
     }
   }
