--- a/src/components/unit/AlbumsTable.scss
+++ b/src/components/unit/AlbumsTable.scss
@@ -6,9 +6,15 @@
   thead {
     border-bottom: 1px solid var(--stroke-stroke, #232323);
     tr {
+      height: 70px;
+      padding: 12px 16px;
+      gap: 16px;
+      align-items: center;
+      align-self: stretch;
       th {
-        color: var(--text-grey, #6e6e6e);
-        font-family: BrokmanTrial;
+        color: var(--primary-200, #a9d400);
+        text-align: center;
+        font-family: Orbitron;
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
@@ -24,31 +30,26 @@
       align-items: center;
       align-self: stretch;
       td {
+        color: var(--Text-music-sub, #aaa);
         text-align: center;
-        font-family: BrokmanTrial;
+        font-family: Inter;
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
-        line-height: 100%; /* 14px */
-        border-bottom: 1px solid var(--stroke-stroke, #232323);
+        line-height: normal;
         .my-albums__detail-btn {
-          color: #000;
-          text-align: right;
-          font-family: Inter;
-          font-size: 12px;
-          font-style: normal;
-          font-weight: 700;
-          line-height: normal;
           display: flex;
-          padding: 6px 8px 5px 5px;
+          width: 100px;
+          padding: 8px 12px;
           justify-content: center;
           align-items: center;
-          border-radius: 16px;
-          background: var(--Color-10, #fff);
+          gap: 8px;
+          border-radius: 12px;
+          background: var(--Color-03, #222);
         }
       }
       &:hover {
-        background: var(--mob_main, #cf0);
+        background: var(--Color-04, #383838);
       }
     }
   }
