경세 커버 자동생성 더미 작업 중

--- a/src/components/create/AlbumCoverStudio.scss
+++ b/src/components/create/AlbumCoverStudio.scss
@@ -40,6 +40,11 @@
             border: 1px solid #cf0;
             padding: 24px;
         }
+        progress {
+            width: 100%;
+            max-width: 48px;
+            height: 5px;
+        }
     }
 
     .creating-select {
