--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -23,15 +23,14 @@
 .header{
   width: 100%;
   padding: 16px;
+  position: fixed;
+  top:0;
+  left: 0;
   .header__inner{
     display: flex;
     align-items: center;
     height: 56px;
     gap: 8px;
- 
-    
-
-
 
     /* From Uiverse.io by JulanDeAlb */ 
 .hamburger {
@@ -174,7 +173,7 @@
             transform: translate(0,0);
           }
 
-      }
+        }
       }
     }
 
