영진 수정 - 전체 pull

--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -330,7 +330,7 @@
 
   .album__slide{
     padding: 50px 16px;
-    .swiper__test{
+    .swiper-music-list{
       height: 500px;
       padding: 40px 0;
       .swiper-slide{
