--- a/src/components/create/SelectItem.scss
+++ b/src/components/create/SelectItem.scss
@@ -1,4 +1,4 @@
-.tag-select-wrap {
+.create__select-components {
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -6,109 +6,147 @@
     border: 1px solid #222;
     border-radius: 12px;
     margin-bottom: 40px;
-}
 
-.create__select-components {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-
-    .tag-title {
-        font-family: Orbitron400;
-        font-size: 18px;
-        letter-spacing: 0.54px;
-        color: #f1f1f1;
-    }
-    .tag-sub-title {
-        color: #a9d400;
-        font-family: Inter400;
-        font-size: 14px;
-        letter-spacing: 0.42px;
-    }
-    .tag-preset {
+    .tag-select-title {
         display: flex;
-        gap: 12px;
-    }
-    .tag-input-box {
-        position: relative;
-    }
-    .tag-input {
-        height: 54px;
-        padding: 12px;
-        border-radius: 12px;
-        border: 1px solid #383838;
-        background-color: #0b0b0c;
-    }
-    .tag-input-comment-button-wrap {
-        position: absolute;
-        display: flex;
-        gap: 16px;
-        right: 12px;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-    .tag-input-comment-button {
-        display: flex;
+        justify-content: space-between;
         align-items: center;
-        justify-content: center;
-        background-color: #cf0;
-        width: 120px;
-        height: 30px;
-        color: #1a1a1a;
-        font-family: orbitron600;
-        font-size: 14px;
-        letter-spacing: 0.42px;
-        border-radius: 12px;
-        position: relative;
-        input {
-            position: absolute;
-            height: 0px;
-            width: 0px;
-            border: none;
+        .tag-select-title__text {
+            color: var(--Text-music-title, #cf0);
+            font-family: Orbitron400;
+            font-size: 24px;
+            letter-spacing: 0.72px;
+            position: relative;
+            margin-bottom: 8px;
+            &::after {
+                position: absolute;
+                content: '';
+                width: 5px;
+                height: 5px;
+                top: 0;
+                background-color: #cf0;
+                border-radius: 100%;
+            }
         }
     }
 
-    .tag-selected {
+    .tag-select {
         display: flex;
+        flex-direction: column;
         gap: 16px;
-    }
-    .tag-button {
-        padding: 8px;
-        border-radius: 10px 2px 10px 10px;
-        font-family: Inter400;
-        font-size: 14px;
-        position: relative;
-        display: flex;
-        align-items: center;
-        &.presets {
-            border: 1px solid #565656;
-            color: #565656;
-            gap: 4px;
-            &:hover,
-            &.enable {
-                border: 1px solid #a9d400;
-                color: #a9d400;
+
+        .tag-title__block {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .tag-title__notice {
+            color: var(--Daisy, #ffd700);
+            font-family: Inter400;
+            font-size: 12px;
+            padding: 4px;
+            height: 23px;
+            background-color: #222;
+            border-radius: 100px;
+            width: fit-content;
+        }
+        .tag-title {
+            font-family: Orbitron400;
+            font-size: 18px;
+            letter-spacing: 0.54px;
+            color: #f1f1f1;
+        }
+        .tag-sub-title {
+            color: #a9d400;
+            font-family: Inter400;
+            font-size: 14px;
+            letter-spacing: 0.42px;
+        }
+        .tag-preset {
+            display: flex;
+            gap: 12px;
+        }
+        .tag-input-box {
+            position: relative;
+        }
+        .tag-input {
+            height: 54px;
+            padding: 12px;
+            border-radius: 12px;
+            border: 1px solid #383838;
+            background-color: #0b0b0c;
+        }
+        .tag-input-comment-button-wrap {
+            position: absolute;
+            display: flex;
+            gap: 16px;
+            right: 12px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+        .tag-input-comment-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #cf0;
+            width: 120px;
+            height: 30px;
+            color: #1a1a1a;
+            font-family: orbitron600;
+            font-size: 14px;
+            letter-spacing: 0.42px;
+            border-radius: 12px;
+            position: relative;
+            input {
+                position: absolute;
+                height: 0px;
+                width: 0px;
+                border: none;
+            }
+        }
+
+        .tag-selected {
+            display: flex;
+            gap: 16px;
+        }
+        .tag-button {
+            padding: 8px;
+            border-radius: 10px 2px 10px 10px;
+            font-family: Inter400;
+            font-size: 14px;
+            position: relative;
+            display: flex;
+            align-items: center;
+            &.presets {
+                border: 1px solid #565656;
+                color: #565656;
+                gap: 4px;
+                &:hover,
+                &.enable {
+                    border: 1px solid #a9d400;
+                    color: #a9d400;
+                    &::after {
+                        background-color: #a9d400;
+                    }
+                }
+
                 &::after {
-                    background-color: #a9d400;
+                    content: '';
+                    position: absolute;
+                    width: 4px;
+                    height: 4px;
+                    top: 2px;
+                    right: 2px;
+                    border-radius: 100%;
+                    background-color: #565656;
                 }
             }
 
-            &::after {
-                content: '';
-                position: absolute;
-                width: 4px;
-                height: 4px;
-                top: 2px;
-                right: 2px;
-                border-radius: 100%;
-                background-color: #565656;
+            &.selected {
+                gap: 4px;
+                background-color: #cf0;
+                color: #1a1a1a;
             }
-        }
-
-        &.selected {
-            gap: 4px;
-            background-color: #cf0;
-            color: #1a1a1a;
         }
     }
 }
