--- a/src/components/create/SelectItem.scss
+++ b/src/components/create/SelectItem.scss
@@ -149,4 +149,30 @@
             }
         }
     }
+
+    .tag-select__range {
+        position: relative;
+        height: 16px;
+        background-color: #383838;
+        border-radius: 25px;
+
+        .tag-select__range--applicable {
+            position: absolute;
+            height: 16px;
+            left: 0;
+            background-color: #cf0;
+            border-radius: 25px;
+        }
+
+        .tag-select__range--thumb {
+            position: absolute;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            width: 24px;
+            height: 24px;
+            border-radius: 4px;
+            background-color: #cf0;
+            box-shadow: -4px 0px 4px 0px rgba(44, 58, 0, 0.6);
+        }
+    }
 }
