--- a/src/components/unit/AlbumsTable.scss
+++ b/src/components/unit/AlbumsTable.scss
@@ -1,4 +1,4 @@
-.my-albums__table {
+.albums-table {
   width: 100%;
   padding: 12px 16px;
   margin: 0 auto;
@@ -37,7 +37,7 @@
         font-style: normal;
         font-weight: 400;
         line-height: normal;
-        .my-albums__detail-btn {
+        .albums-table__detail-btn {
           display: flex;
           width: 100px;
           padding: 8px 12px;
