--- a/src/styles/Create.scss
+++ b/src/styles/Create.scss
@@ -171,7 +171,7 @@
             }
 
             &.back {
-                color: #1f1f1f;
+                color: #f1f1f1;
                 background-color: #383838;
             }
 
