--- a/src/components/ModalWrap.scss
+++ b/src/components/ModalWrap.scss
@@ -11,7 +11,7 @@
   justify-content: center;
 
   .modal-content-box {
-    max-width: 360px;
+    max-width: 400px;
     width: 100%;
     background-color: #222;
     border-radius: 4px;
@@ -233,7 +233,7 @@
               font-style: normal;
               line-height: normal;
               &::before {
-                content: '';
+                content: "";
                 display: block;
                 width: 4px;
                 height: 4px;
@@ -459,13 +459,11 @@
   }
 }
 
-
-
 @media screen and (max-width: 768px) {
-  .modal-wrap{
+  .modal-wrap {
     justify-content: end;
     align-items: end;
-    .modal-content-box{
+    .modal-content-box {
       max-width: 100%;
       width: 100%;
       border: 0;
@@ -483,5 +481,3 @@
     }
   }
 }
-
-
