--- a/src/components/unit/FilterDateModal.scss
+++ b/src/components/unit/FilterDateModal.scss
@@ -3,10 +3,9 @@
   .filter-count-box {
     p {
       color: var(--Text-music-title, #f1f1f1);
-      font-family: Orbitron;
+      font-family: Orbitron400;
       font-size: 14px;
       font-style: normal;
-      font-weight: 400;
       line-height: normal;
       letter-spacing: 0.42px;
       padding-bottom: 12px;
