--- a/src/components/mypage/Albums.scss
+++ b/src/components/mypage/Albums.scss
@@ -1,10 +1,9 @@
 .albums {
   .albums__title {
     color: var(--primary-base, #cf0);
-    font-family: Orbitron;
+    font-family: Orbitron500;
     font-size: 24px;
     font-style: normal;
-    font-weight: 500;
     line-height: 100%; /* 24px */
     letter-spacing: 0.72px;
     margin-bottom: 24px;
@@ -26,10 +25,9 @@
         flex-direction: column;
         .albums__item-title {
           color: var(--primary-base, #cf0);
-          font-family: Orbitron;
+          font-family: Orbitron400;
           font-size: 18px;
           font-style: normal;
-          font-weight: 400;
           line-height: normal;
           letter-spacing: 0.54px;
           margin-bottom: 16px;
@@ -48,10 +46,9 @@
             .albums__item-desc-text {
               align-self: stretch;
               color: var(--Text-music-title, #f1f1f1);
-              font-family: Inter;
+              font-family: Inter400;
               font-size: 14px;
               font-style: normal;
-              font-weight: 400;
               line-height: 100%; /* 14px */
               letter-spacing: 0.42px;
             }
@@ -60,10 +57,9 @@
               gap: 4px;
               span {
                 color: var(--Text-music-sub, #aaa);
-                font-family: Inter;
+                font-family: Inter400;
                 font-size: 12px;
                 font-style: normal;
-                font-weight: 400;
                 line-height: 100%; /* 12px */
                 letter-spacing: 0.36px;
               }
@@ -78,10 +74,9 @@
               }
               span {
                 color: var(--Text-music-title, #f1f1f1);
-                font-family: Inter;
+                font-family: Inter400;
                 font-size: 12px;
                 font-style: normal;
-                font-weight: 400;
                 line-height: 100%; /* 12px */
                 letter-spacing: 0.36px;
               }
