--- a/src/components/mypage/MyFavorites.scss
+++ b/src/components/mypage/MyFavorites.scss
@@ -2,10 +2,9 @@
   padding: 20px 16px 16px 16px;
   color: var(--primary-200, #a9d400);
   text-align: center;
-  font-family: Orbitron;
+  font-family: Orbitron400;
   font-size: 14px;
   font-style: normal;
-  font-weight: 400;
   line-height: normal;
   border-radius: 12px;
   border: 1px solid var(--Color-03, #222);
@@ -16,10 +15,9 @@
     margin-bottom: 24px;
     .my-favorites__title {
       color: var(--primary-base, #cf0);
-      font-family: Orbitron;
+      font-family: Orbitron400;
       font-size: 24px;
       font-style: normal;
-      font-weight: 400;
       line-height: normal;
       letter-spacing: 0.72px;
     }
