--- a/src/components/unit/Filter.scss
+++ b/src/components/unit/Filter.scss
@@ -14,10 +14,9 @@
     }
     span {
       color: var(--primary-base, #cf0);
-      font-family: Inter;
+      font-family: Inter400;
       font-size: 14px;
       font-style: normal;
-      font-weight: 400;
       line-height: 100%; /* 14px */
     }
   }
