--- a/src/styles/AccountSetting.scss
+++ b/src/styles/AccountSetting.scss
@@ -1,10 +1,9 @@
 .account-setting {
   .account-setting--title {
     color: var(--primary-base, #cf0);
-    font-family: Orbitron;
+    font-family: Orbitron600;
     font-size: 30px;
     font-style: normal;
-    font-weight: 600;
     line-height: normal;
     letter-spacing: 0.9px;
     margin-bottom: 40px;
@@ -22,10 +21,9 @@
     .account-setting__info-box {
       .info-box__title {
         color: var(--primary-base, #cf0);
-        font-family: Orbitron;
+        font-family: Orbitron400;
         font-size: 24px;
         font-style: normal;
-        font-weight: 400;
         line-height: normal;
         letter-spacing: 0.72px;
         display: flex;
@@ -38,10 +36,9 @@
       .info-box__picture-box {
         .picture-box__title {
           color: var(--Text-music-title, #f1f1f1);
-          font-family: Orbitron;
+          font-family: Orbitron500;
           font-size: 18px;
           font-style: normal;
-          font-weight: 500;
           line-height: normal;
           letter-spacing: 0.54px;
           margin-bottom: 8px;
@@ -71,10 +68,9 @@
         }
         .picture-box__desc {
           color: var(--primary-200, #a9d400);
-          font-family: Inter;
+          font-family: Inter400;
           font-size: 14px;
           font-style: normal;
-          font-weight: 400;
           line-height: normal;
           letter-spacing: 0.42px;
         }
@@ -84,10 +80,9 @@
       width: 100%;
       .background-box__title {
         color: var(--Text-music-title, #f1f1f1);
-        font-family: Orbitron;
+        font-family: Orbitron500;
         font-size: 18px;
         font-style: normal;
-        font-weight: 500;
         line-height: normal;
         letter-spacing: 0.54px;
         margin-bottom: 8px;
@@ -124,10 +119,9 @@
       }
       .background-box__desc {
         color: var(--primary-200, #a9d400);
-        font-family: Inter;
+        font-family: Inter400;
         font-size: 14px;
         font-style: normal;
-        font-weight: 400;
         line-height: normal;
         letter-spacing: 0.42px;
       }
@@ -139,10 +133,9 @@
         margin-bottom: 16px;
         .user-info__title {
           color: var(--Text-music-title, #f1f1f1);
-          font-family: Orbitron;
+          font-family: Orbitron500;
           font-size: 18px;
           font-style: normal;
-          font-weight: 500;
           line-height: normal;
           letter-spacing: 0.54px;
           margin-bottom: 8px;
@@ -152,19 +145,17 @@
           justify-content: space-between;
           .user-info__count {
             color: var(--primary-200, #a9d400);
-            font-family: Inter;
+            font-family: Inter400;
             font-size: 14px;
             font-style: normal;
-            font-weight: 400;
             line-height: 100%; /* 14px */
           }
         }
         .user-info__desc {
           color: var(--primary-200, #a9d400);
-          font-family: Inter;
+          font-family: Inter400;
           font-size: 14px;
           font-style: normal;
-          font-weight: 400;
           line-height: normal;
           letter-spacing: 0.42px;
           margin-bottom: 12px;
@@ -198,10 +189,9 @@
             color: var(--Text-dark-title, #1a1a1a);
             border-radius: 12px;
             background: var(--primary-base, #cf0);
-            font-family: Orbitron;
+            font-family: Orbitron600;
             font-size: 14px;
             font-style: normal;
-            font-weight: 600;
             line-height: normal;
             letter-spacing: 0.42px;
             display: flex;
@@ -213,10 +203,9 @@
         }
         .user-info__error {
           color: var(--warning, #df1919);
-          font-family: Inter;
+          font-family: Inter300;
           font-size: 12px;
           font-style: normal;
-          font-weight: 300;
           line-height: 100%; /* 12px */
           letter-spacing: 0.36px;
         }
@@ -236,10 +225,9 @@
     .details__header {
       .details__title {
         color: var(--primary-base, #cf0);
-        font-family: Orbitron;
+        font-family: Orbitron400;
         font-size: 24px;
         font-style: normal;
-        font-weight: 400;
         line-height: normal;
         letter-spacing: 0.72px;
         display: flex;
@@ -254,10 +242,9 @@
       margin-bottom: 16px;
       .details__item-title {
         color: var(--Text-music-title, #f1f1f1);
-        font-family: Orbitron;
+        font-family: Orbitron500;
         font-size: 18px;
         font-style: normal;
-        font-weight: 500;
         line-height: normal;
         letter-spacing: 0.54px;
         margin-bottom: 8px;
@@ -288,10 +275,9 @@
     .social__header {
       .social__title {
         color: var(--primary-base, #cf0);
-        font-family: Orbitron;
+        font-family: Orbitron400;
         font-size: 24px;
         font-style: normal;
-        font-weight: 400;
         line-height: normal;
         letter-spacing: 0.72px;
       }
@@ -301,20 +287,18 @@
       margin-bottom: 16px;
       .social__item-title {
         color: var(--Text-music-title, #f1f1f1);
-        font-family: Orbitron;
+        font-family: Orbitron500;
         font-size: 18px;
         font-style: normal;
-        font-weight: 500;
         line-height: normal;
         letter-spacing: 0.54px;
         margin-bottom: 8px;
       }
       .social__desc {
         color: var(--primary-200, #a9d400);
-        font-family: Inter;
+        font-family: Inter400;
         font-size: 14px;
         font-style: normal;
-        font-weight: 400;
         line-height: normal;
         letter-spacing: 0.42px;
         margin-bottom: 12px;
@@ -348,10 +332,9 @@
           color: var(--Text-dark-title, #1a1a1a);
           border-radius: 12px;
           background: var(--primary-base, #cf0);
-          font-family: Orbitron;
+          font-family: Orbitron600;
           font-size: 14px;
           font-style: normal;
-          font-weight: 600;
           line-height: normal;
           letter-spacing: 0.42px;
           display: flex;
@@ -363,10 +346,9 @@
       }
       .social__error {
         color: var(--warning, #df1919);
-        font-family: Inter;
+        font-family: Inter300;
         font-size: 12px;
         font-style: normal;
-        font-weight: 300;
         line-height: 100%; /* 12px */
         letter-spacing: 0.36px;
       }
