--- a/src/components/unit/AlbumsTable.scss
+++ b/src/components/unit/AlbumsTable.scss
@@ -36,6 +36,12 @@
         font-style: normal;
         line-height: normal;
         .albums-table__detail-btn {
+          color: var(--Text-music-sub, #aaa);
+          font-family: Inter500;
+          font-size: 12px;
+          font-style: normal;
+          line-height: 100%; /* 12px */
+          letter-spacing: 0.36px;
           display: flex;
           width: 100px;
           padding: 8px 12px;
